# snake-reason-game

./: .dockerignore  Dockerfile  Makefile  dune-project  fly.toml  package-lock.json  package.json  snake-reason-game.opam  webpack.config.js
public/: index.html
src/: Bindings.re  Board.re  Board.rei  Controls.re  Controls.rei  Food.re  Food.rei  Game.re  Game.rei  ReactApp.re  ReactApp.rei  Settings.re  Settings.rei  Snake.re  Snake.rei  Utils.re  Utils.rei
