(lang dune 3.8)

(using melange 0.1)

(name snake-reason-game)

(license "MIT")

(maintainers @kevinanantha)

(authors "Kevin Anantha")

(homepage https://github.com/your/project)

(bug_reports https://github.com/your/project/issues)

(package
 (allow_empty)
 (name snake-reason-game)
 (synopsis "Snake Reason Game")
 (description "Snake Reason Game"))
